Pruebas de usuarios y personajes casi completas